--- a/apps/shell/src/index.html
+++ b/apps/shell/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>shell</title>
+    <title>Assemble ERP</title>
+    <!-- Title uses BRAND.NAME from @erp/shared/config -->
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="assemble-logo.png" />
+    <link rel="apple-touch-icon" href="assemble-logo.png" />
+    <meta name="description" content="Assemble ERP - Professional Enterprise Resource Planning System" />
+    <!-- Description uses APP_METADATA.DESCRIPTION from @erp/shared/config -->
   </head>
   <body>
     <app-root></app-root>
